force-app/main/default/objects/Account_Objective__c/fields/Assigned__c.field-meta.xml
<CustomField>
    <fullName>Assigned__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Who is accountable for the progress of this objective?</description>
    <inlineHelpText>Who is accountable for the progress of this objective?</inlineHelpText>
    <label>Assigned</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Account_Objectives1</relationshipName>
    <type>Lookup</type>
</CustomField>