force-app/main/default/objects/Account_Objective__c/fields/Purpose__c.field-meta.xml
<CustomField>
    <fullName>Purpose__c</fullName>
    <description>What is the main purpose of this objective?</description>
    <inlineHelpText>What is the main purpose of this objective?</inlineHelpText>
    <label>Purpose</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Increase Recurring</fullName>
            </value>
            <value>
                <fullName>Secure Renewal</fullName>
            </value>
            <value>
                <fullName>Build Reference/Relationship</fullName>
            </value>
            <value>
                <fullName>Advance Product Strategy</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>