force-app/main/default/objects/Account_Objective__c/fields/Requestor__c.field-meta.xml
<CustomField>
    <fullName>Requestor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Which IntApp employee has asked for this account objective to be tracked?</description>
    <inlineHelpText>Which IntApp employee has asked for this account objective to be tracked?</inlineHelpText>
    <label>Requestor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Account_Objectives</relationshipName>
    <type>Lookup</type>
</CustomField>